# tensorSB

./: README.md  conda_requirements.txt  environment.yml  installation.txt  pyproject.toml
examples/: DMRG_examples.ipynb  basic_examples.ipynb
src/tensorSB/: __init__.py
src/tensorSB/DMRG/: DMRG_GS_1site.py  DMRG_GS_RSVD.py  __init__.py  eig_1site_GS.py  rsvd_selection.py
src/tensorSB/DensityMatrix/: batched_ensemble_trace.py  batched_expected_value.py  trace.py
src/tensorSB/MPO/: HeisenbergMPO.py  TFIMMPO.py  XXZMPO.py  __init__.py  get_MPO.py  squareMPO.py  trace_MPO.py
src/tensorSB/MPS/: H_val_MPS.py  H_var_MPS.py  MPS_initialize.py  __init__.py  apply_MPO_to_MPS.py  canon_form.py  correlation_MPS.py  move_center.py  norm_MPS.py  overlap_MPS.py
src/tensorSB/MixedMPS/: __init__.py  batched_ensemble_trace.py  batched_expected_value.py  batched_update_left.py
src/tensorSB/Module/: __init__.py  models.py
src/tensorSB/backend/: backend.py
src/tensorSB/batchedDensityMatrix/: __init__.py  batched_ensemble_trace.py  batched_trace.py  batched_trace_n.py
src/tensorSB/batchedMPS/: batched_correlation_MPS.py  batched_local_expected_value.py  batched_trace.py
src/tensorSB/circuit/: QuantumCircuit.py  __init__.py  gates.py
src/tensorSB/tensor/: Hconj.py  __init__.py  contract.py  eigh.py  get_identity.py  get_local_space.py  qr.py  qr_expr.py  svd.py  svd_expr.py  update_left.py
